--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+
     <title>Document</title>
 </head>
 <body>
-    <h1>this is version v2</h1>
+    <h1>this is version v3</h1>
     
 </body>
 </html>
